# Imagetocode

./: Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
codegen/: flutter_dart.py  html_css_js.py  react_jsx.py  registry.py
codegen/templates/flutter/: README.md.j2  lib_main.dart.j2  pubspec.yaml.j2
codegen/templates/react/: README.md.j2  index.html.j2  package.json.j2  src_App.jsx.j2
codegen/templates/web/: README.md.j2  app.js.j2  index.html.j2  styles.css.j2
core/: detect.py  enhanced_detect.py  layout.py  ocr.py
core/schema/: ir_schema_v1.json
docs/: Slides.pptx  Windows_EXE.md
outputs/auto_enhanced_flutter/: README.md
outputs/auto_enhanced_flutter/.dart_tool/: package_config.json  package_config_subset  package_graph.json
outputs/auto_enhanced_flutter/.dart_tool/extension_discovery/: vs_code.json
outputs/auto_enhanced_flutter/lib/: main.dart
outputs/auto_enhanced_web/: index.html  styles.css
outputs/auto_flutter/lib/: main.dart
outputs/auto_web/: index.html  styles.css
packaging/: imageto_multicode.spec
samples/expected/login/flutter/: pubspec.yaml
samples/expected/login/react/: index.html
samples/inputs/: README.md
samples/ir/: login.json  profile.json  signup.json
scripts/: cli.py
tests/: test_bootstrap.py  test_detect_basics.py  test_e2e_pipeline.py  test_editor_save_load.py  test_ir_validation.py  test_layout_snap.py  test_ocr_optional.py
utils/: geometry.py  ide_integration.py  io_helpers.py  safe_file_ops.py  sanitize.py  viz.py
(+16 files in other folders)
